Add project section

--- a/index.html
+++ b/index.html
@@ -48,12 +48,23 @@
                 <p class="in-line">Hey, I know how to move my lips and tongue to make the right sounds. It could get awkward but that's my forte -.-</p>
             </div>
         </div>
-        <hr>
+        
+        <div class="projects">
+            <h2 class="d_blue">Projects</h2>
+            <img src="Images/milestone.png" alt="" class="project-img">
+            <ul>
+                <li><a href="/Playlist-Creator">Super DJ</a></li>
+                <li><a href="/PitchSide">Lineup Creator</a></li>
+                <li><a href="https://stashit.onrender.com">Weather Checker</a></li>
+            </ul>
+        </div>
         <div class="contact-me">
             <h2 class="d_blue">Get In Touch</h2>
             <img class="chat-img" src="Images\chat.png" alt="">
-            <h3>Found me irresistible yeah? Me too, luv.</h3>
-            <p>Hit me up, and we can talk about everything from Python to (not)HTML to football, controversial topics, psychology, biology and Python.</p>
+            <div>
+                <h3>Found me irresistible yeah? Me too, luv.</h3>
+                <p>Hit me up, and we can talk about everything from Python to (not)HTML to football, controversial topics, psychology, biology and Python.</p>
+            </div>
 
             <a class="btn" href="mailto:ioyeboade@gmail.com">CONTACT ME</a>
         </div>
